
Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.43.3 - November ??, 2011

    Updated the Lean Prolog config file, adding index/1 directives for some
    of the dynamic predicates used by the internal Logtalk runtime tables.

    Updated the SWI-Prolog integration files to test for the availability
    of the index/1 directive, which is deprecated by the new experimental
    SWI-Prolog support for just-in-time multi-argument indexing.

    Added a predicate subsequence/4 for generating subsequences of a list
    with a given length to the library "listp" and "list" entities.

    Corrected some silly bugs in the definition of the "character" library
    object predicates is_bin_digit/1, is_octal_digit/1, is_dec_digit/1, and
    is_hex_digit/1.


2.43.2 - October 4, 2011

    Optimized the processing of operator declarations when compiling source
    files and dynamically creating new entities.

    Updated the Logtalk compiler to use the "modules" compiler flag when
    testing for Prolog module support, thus avoid compilation issues with
    back-end Prolog compilers that don't support a module system but still
    define (:)/2 as a built-in control construct or predicate.

    Removed support for the "startup_message" compiler flag "flags(compact)"
    and "flags(verbose)" values, replaced by a single value, "flags", which
    corresponds to the old "flags(compact)" value.

    Corrected a bug when using op/3 directives with the create_protocol/3,
    create_object/4, and create_category/4 built-in predicates where the
    local operator declarations would be visible outside the new entities.
