@@ -5323,12 +5323,17 @@ current_logtalk_flag(version, version(2, 43, 3)).
 
 '$lgt_report_compiling_file'(File) :-
 	(	'$lgt_compiler_flag'(report, on) ->
-		write('% >>> compiling source file '), writeq(File),
+		'$lgt_file_extension'(logtalk, Extension),
+		write('% >>> compiling source file '), write(File), write(Extension),
 		(	'$lgt_compiler_flag'(debug, on) ->
-			write(' in debug mode...')
-		;	write('...')
+			write(' in debug mode')
+		;	true
 		),
-		nl
+		(	'$lgt_compiler_flag'(hook, Hook) ->
+			write(' using the hook object '), writeq(Hook)
+		;	true
+		),
+		write('...'), nl
 	;	true
 	).
 
@@ -5340,7 +5345,8 @@ current_logtalk_flag(version, version(2, 43, 3)).
 
 '$lgt_report_up_to_date_file'(File) :-
 	(	'$lgt_compiler_flag'(report, on) ->
-		write('% >>> compiling source file '), writeq(File), write('... up-to-date'), nl
+		'$lgt_file_extension'(logtalk, Extension),
+		write('% >>> compiling source file '), write(File), write(Extension), write('... up-to-date'), nl
 	;	true
 	).
 
@@ -5352,7 +5358,8 @@ current_logtalk_flag(version, version(2, 43, 3)).
 
 '$lgt_report_compiled_file'(File) :-
 	(	'$lgt_compiler_flag'(report, on) ->
-		write('% >>> '), writeq(File), write(' source file compiled'), nl
+		'$lgt_file_extension'(logtalk, Extension),
+		write('% >>> '), write(File), write(Extension), write(' source file compiled'), nl
 	;	true
 	).
 
@@ -5364,7 +5371,8 @@ current_logtalk_flag(version, version(2, 43, 3)).
 
 '$lgt_report_loading_file'(File) :-
 	(	'$lgt_compiler_flag'(report, on) ->
-		write('% <<< loading source file '), writeq(File), write('... '), nl
+		'$lgt_file_extension'(logtalk, Extension),
+		write('% <<< loading source file '), write(File), write(Extension), write('... '), nl
 	;	true
 	).
 
@@ -5375,7 +5383,8 @@ current_logtalk_flag(version, version(2, 43, 3)).
 
 '$lgt_report_reloading_file'(File) :-
 	(	'$lgt_compiler_flag'(report, on) ->
-		write('% <<< reloading source file '), writeq(File), write('... '), nl
+		'$lgt_file_extension'(logtalk, Extension),
+		write('% <<< reloading source file '), write(File), write(Extension), write('... '), nl
 	;	true
 	).
 
@@ -5386,7 +5395,8 @@ current_logtalk_flag(version, version(2, 43, 3)).
 
 '$lgt_report_skipping_file'(File) :-
 	(	'$lgt_compiler_flag'(report, on) ->
-		write('% <<< skipping loading of source file '), writeq(File), write(' (already loaded) '), nl
+		'$lgt_file_extension'(logtalk, Extension),
+		write('% <<< skipping loading of source file '), write(File), write(Extension), write(' (already loaded) '), nl
 	;	true
 	).
 
@@ -5397,7 +5407,8 @@ current_logtalk_flag(version, version(2, 43, 3)).
 
 '$lgt_report_loaded_file'(File) :-
 	(	'$lgt_compiler_flag'(report, on) ->
-		write('% <<< '), writeq(File), write(' source file loaded'), nl
+		'$lgt_file_extension'(logtalk, Extension),
+		write('% <<< '), write(File), write(Extension), write(' source file loaded'), nl
 	;	true
 	).
 
@@ -5408,7 +5419,8 @@ current_logtalk_flag(version, version(2, 43, 3)).
 
 '$lgt_report_reloaded_file'(File) :-
 	(	'$lgt_compiler_flag'(report, on) ->
-		write('% <<< '), writeq(File), write(' source file reloaded'), nl
+		'$lgt_file_extension'(logtalk, Extension),
+		write('% <<< '), write(File), write(Extension), write(' source file reloaded'), nl
 	;	true
 	).
 
@@ -5991,7 +6003,8 @@ current_logtalk_flag(version, version(2, 43, 3)).
 
 '$lgt_report_error_context'(File, Input) :-
 	(	'$lgt_compiler_flag'(report, warnings) ->
-		write('%                   in file '), write(File),
+		'$lgt_file_extension'(logtalk, Extension),
+		write('%                   in file '), write(File), write(Extension),
 		(	catch('$lgt_stream_current_line_number'(Input, Line), _, fail) ->
 			write(', above line '), write(Line), nl
 		;	true
@@ -12408,8 +12421,9 @@ current_logtalk_flag(version, version(2, 43, 3)).
 '$lgt_report_warning_entity_context'(Type, Entity) :-
 	(	'$lgt_compiler_flag'(report, warnings) ->
 		'$lgt_pp_file_path_'(File, _),
+		'$lgt_file_extension'(logtalk, Extension),
 		write('%                   in '), write(Type), write(' '), writeq(Entity),
-		write(', defined in file '), write(File), nl,
+		write(', defined in file '), write(File), write(Extension), nl,
 		write('%')
 	;	true
 	).
@@ -12425,7 +12439,8 @@ current_logtalk_flag(version, version(2, 43, 3)).
 	!,	% avoid a spurious choice-point with some Prolog compilers
 	(	'$lgt_compiler_flag'(report, warnings) ->
 		'$lgt_pp_file_path_'(File, _),
-		write('%                   in file '), write(File),
+		'$lgt_file_extension'(logtalk, Extension),
+		write('%                   in file '), write(File), write(Extension),
 		'$lgt_report_warning_line_number'(Input),
 		write('%')
 	;	'$lgt_compiler_flag'(report, on) ->
@@ -12444,8 +12459,9 @@ current_logtalk_flag(version, version(2, 43, 3)).
 	stream_property(Input, alias('$lgt_input')),
 	!,	% avoid a spurious choice-point with some Prolog compilers
 	(	'$lgt_compiler_flag'(report, warnings) ->
+		'$lgt_file_extension'(logtalk, Extension),
 		write('%                   in '), write(Type), write(' '), writeq(Entity),
-		write(', defined in file '), write(File),
+		write(', defined in file '), write(File), write(Extension),
 		'$lgt_report_warning_line_number'(Input),
 		write('%')
 	;	'$lgt_compiler_flag'(report, on) ->
